# thc_junior

./: .dockerignore  DEBUGGING_CHALLENGE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
catalogue/: api.py  database.py  schemas.py  scraper.py
deliverables/: DEBUGGING_BEST_PRACTICES.md  check_parts_duplicates.py  find_all_models.py
tests/: api_test.py
